Refactor build scripts and exception handling
- Replace `String.format` with `.formatted` in `GlobalExceptionHandler`.
- Update `zip64` syntax in `build.gradle`.
- Adjust `rewrite` recipe to `UpgradeSpringBoot_4_0`.
- Update Spring Boot dependency from `spring-boot-starter-web` to `spring-boot-starter-webmvc`.
- Replace `spring-boot-starter-oauth2-resource-server` with `spring-boot-starter-security-oauth2-resource-server`.